Melhorias com formulario

--- a/instagram-clone-page/index.html
+++ b/instagram-clone-page/index.html
@@ -23,7 +23,7 @@
                 <!-- Inserindo a logo e formulario -->
                 <div class="grupo1">
                     <!-- inserindo a logo do instagram -->
-                    <img src="./imagens/instagram-logo.png" alt="Logo Instagam">
+                    <img class="logo" src="./imagens/instagram-logo.png" alt="Logo Instagam">
                     <!-- Inserindo formulario -->
                     <div class="login">
                         <!-- Formulario -->
@@ -33,34 +33,40 @@
                             <!-- Campo para senha -->
                             <input class="senha" type="password" id="senha" name="senha" placeholder="Senha">
                             <!-- Botao Entrar -->
-                            <button class="botao" type="button">Entrar</button>
+                            <input type="submit" id="entrar" name="entrar" value="Entrar">
                         </form>
                         <!-- Textos e links -->
                         <!-- OU -->
                         <p class="ou">OU</p>
                         <!-- Entrar com FB -->
-                        <a href="#" class="entrarComFb">Entrar com o Facebook</a>
+                        <span href="#" class="entrarComFb">Entrar com o Facebook</span>
                         <!-- Esqueceu a Senha -->
-                        <a href="#" class="esqueceuSenha" >Esqueceu a senha?</a>
+                        <span href="#" class="esqueceuSenha" >Esqueceu a senha?</span>
                     </div>
+                </div>
+
+
                     <!-- Segundo grupo cadastre-se -->
                     <div class="grupo2">
                         <!-- Texto nao tem uma conta -->
                         <p class="naoTemConta">Nao tem uma conta?</p>
                         <!-- Link Cadastre-se -->
-                        <span class="cadastre-se">Cadastre-se</span>
+                        <a href="#" class="cadastre"> Cadastre-se</a>
                     </div>
+
+
                     <!-- Botoes para obter o aplicativo -->
-                    <div class="obtenhaAplicativo">
+                    <div class="grupo3">
+
                         <!-- Texto baixe o app -->
                         <p class="obtenhaApp">Baixe o aplicativo.</p>
+
                         <!-- Compartimento para os botoes para download dos aplicativos -->
                         <div class="aplicativos">
                             <a href="#" class="downloadApp"></a>
                             <a href="#" class="downloadApp"></a>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </body>
