Projeto Insta clone page finalizado

--- a/instagram-clone-page/index.html
+++ b/instagram-clone-page/index.html
@@ -37,30 +37,30 @@
                         </form>
                         <!-- Textos e links -->
                         <!-- OU -->
-                        <p class="ou">OU</p>
+                        <div class="ou">
+                            <div class="linha"></div>
+                            <div class="or">ou</div>
+                            <div class="linha"></div>
+                        </div>
                         <!-- Entrar com FB -->
+                        <div class="entrarcomfb">
+                        <img src="../instagram-clone-page/imagens/iconefb.png" alt="Icone Facebook">
                         <span href="#" class="entrarComFb">Entrar com o Facebook</span>
+                        </div>
                         <!-- Esqueceu a Senha -->
                         <span href="#" class="esqueceuSenha" >Esqueceu a senha?</span>
                     </div>
                 </div>
-
-
                     <!-- Segundo grupo cadastre-se -->
                     <div class="grupo2">
-                        <!-- Texto nao tem uma conta -->
-                        <p class="naoTemConta">Nao tem uma conta?</p>
-                        <!-- Link Cadastre-se -->
-                        <a href="#" class="cadastre"> Cadastre-se</a>
+                        <!-- Texto nao tem uma conta com o link de cadastre-se -->
+                        <p class="naoTemConta">Nao tem uma conta?<a href="#" class="cadastre"> Cadastre-se</a>
+                        </p>
                     </div>
-
-
                     <!-- Botoes para obter o aplicativo -->
                     <div class="grupo3">
-
                         <!-- Texto baixe o app -->
-                        <p class="obtenhaApp">Baixe o aplicativo.</p>
-
+                        <p class="obtenhaApp">Obtenha o aplicativo.</p>
                         <!-- Compartimento para os botoes para download dos aplicativos -->
                         <div class="aplicativos">
                             <a href="#" class="downloadApp"></a>
@@ -70,4 +70,5 @@
             </div>
         </div>
     </body>
+    
 </html>
